<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Banana</string>
    <!--讯飞语音app id-->
    <string name="app_id">553607f4</string>
    <string name="amap_app_id">02e2e572387332dc644ca633bd476749</string>

    <!--waitTing page-->
    <string name="wait_please">请稍等，我准备下…</string>
    <string name="log_out">再按一次，退出Banana</string>

    <!--main page-->
    <!--<string name="show_look_more">显示查看更多</string>-->
    <string name="help">帮助</string>
    <string name="open_flashlight">打开手电筒</string>
    <string name="close_flashlight">点击关闭手电筒</string>
    <string name="setting">设置</string>
    <string name="send">发送</string>
    <string name="press_and_say">按住 说话</string>
    <string name="loosen_to_end">松开 结束</string>
    <string name="please_wait">请稍候</string>

    <string name="look_in_bai_du">更多</string>
    <string name="copy">复制</string>
    <string name="copy_successfully">复制成功</string>
    <string name="delete">删除</string>
    <string name="delete_successfully">删除成功</string>
    <string name="call_somebody">打电话给</string>
    <string name="send_message_to">发短信给</string>
    <string name="say_something">说点什么？</string>
    <string name="send_sms_successfully">发送成功</string>
    <string name="search">搜索</string>
    <string name="no_this_man">您的通讯录里没有这个人</string>
    <string name="read_short_message">允许读取新短信</string>
    <string name="allow_to_say">允许语音播报</string>
    <string name="num">号码</string>
    <string name="short_message_tip">发来短信说，</string>
    <string name="alarm_setting">闹钟设置</string>

    <string name="on">开</string>
    <string name="off">关</string>
    <string name="alarm">闹钟</string>
    <string name="zero_eight">08</string>
    <string name="colon">:</string>
    <string name="zero_zero">00</string>
    <string name="note_hint">设置消息提醒</string>
    <string name="report_weather_on_time">定时为您播报明日天气情况？</string>
    <string name="confirm">确定</string>

    <string name="no_alarm">您没有设置任何闹钟</string>
    <string name="title_activity_look_other_info_web">LookOtherInfoWebActivity</string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="set_img_for_user">设置我的头像</string>
    <string name="take_photo">拍照</string>
    <string name="pick_picture_in_phone">从相册中选择图片</string>
    <string name="no_img">不要头像</string>
    <string name="original_img">原头像</string>
    <string name="user_img_tag">user</string>
    <string name="robot_img_tag">robot</string>


    <!--帮助页面-->
    <string name="how_to_ask">怎么提问</string>
    <string name="just_ask">随便问</string>
    <string name="how_to_search">怎么搜索</string>
    <string name="search_example">搜索机器人</string>
    <string name="how_to_call">怎么打电话</string>
    <string name="call_someone">打电话给（某人）</string>
    <string name="how_to_send_message">怎么发短信</string>
    <string name="send_to_someone">发短信给（某人）</string>
    <string name="how_to_open_flash_light">怎么打开手电筒</string>
    <string name="how_to_see_guide">怎么查看帮助</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_time_up">TimeUpActivity</string>

    <!--闹钟-->
    <string name="hello">Hello World, DeskClockMainActivity!</string>

    <string name="label">"标签"</string>
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm" >"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置闹钟"</string>

    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>

    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>

    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>
    <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的闹钟铃声播放服务。"</string>
</resources>
