<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/set_alarm">
    <CheckBoxPreference android:key="enabled"
        android:persistent="false"
        android:buttonTint="@color/robot_yellow_light"
        android:title="@string/enable_alarm" />
    <Preference android:key="time"
        android:persistent="false"
        android:title="@string/time"/>
    <com.name.myassistant.deskclock.RepeatPreference
        android:persistent="false"
        android:key="setRepeat"
        android:title="@string/alarm_repeat" />
    <com.name.myassistant.deskclock.AlarmPreference
        android:key="alarm"
        android:title="@string/alert"
        android:ringtoneType="alarm"
        android:persistent="false"
        android:showDefault="false"
        android:showSilent="true" />
    <CheckBoxPreference android:key="vibrate"
        android:persistent="false"
        android:buttonTint="@color/robot_yellow_light"
        android:title="@string/alarm_vibrate"/>
    <EditTextPreference android:key="label"
        android:persistent="false"
        android:title="@string/label"
        android:dialogTitle="@string/label" />
</PreferenceScreen>
