<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <CheckBoxPreference
        android:key="alarm_in_silent_mode"
        android:title="@string/alarm_in_silent_mode_title"
        android:summary="@string/alarm_in_silent_mode_summary" />

    <VolumePreference
        android:title="@string/alarm_volume_title"
        android:summary="@string/alarm_volume_summary"
        android:dialogTitle="@string/alarm_volume_title"
        android:persistent="false"
        android:streamType="alarm" />

    <ListPreference
        android:key="snooze_duration"
        android:title="@string/snooze_duration_title"
        android:entries="@array/snooze_duration_entries"
        android:entryValues="@array/snooze_duration_values"
        android:defaultValue="10"
        android:dialogTitle="@string/snooze_duration_title" />

</PreferenceScreen>
