<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="com.name.myassistant.alarm.AlarmSettingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/alarm"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="64sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:text="@string/colon"/>
        <TextView
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="64sp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_hint"/>
    <CheckBox
        android:id="@+id/weather_report_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_weather_on_time"/>
    <TextView
        android:id="@+id/set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@drawable/oval_light_gray_solid"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/confirm"/>

</LinearLayout>
