<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.name.myassistant.RobotSettingActivity"
    android:id="@+id/setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/robot_setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/back_32"
        android:background="@color/black"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginBottom="24dp">
                <ImageView
                    android:id="@+id/robot_img"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/user_img_48"/>
                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>
            </LinearLayout>
            <CheckBox
                android:id="@+id/read_short_message_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/read_short_message"/>
            <TextView
                android:id="@+id/alarm_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/alarm_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="12dp"
                android:text="@string/alarm_setting"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>


